--- a/about.html
+++ b/about.html
@@ -35,6 +35,8 @@
             </li>
             <li><a href="./treatments.html">TREATMENTS</a>
             </li>
+            <li><a href="./yurt.html">YOGA IN A YURT</a>
+            </li>
             <li><a class="selected" href="./about.html">ABOUT JAYMIN</a>
             </li>
             <li><a href="./contact.html">CONTACT</a>
