--- a/contact.html
+++ b/contact.html
@@ -1,59 +1,79 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-	<head>
-		<title>Shadow Yoga with Jaymin - Contact</title>
-		<LINK rel="stylesheet" href="ywj.css" type="text/css">	
-			<script type="text/javascript">
+<head>
+    <title>Shadow Yoga with Jaymin - Contact</title>
+    <LINK rel="stylesheet" href="ywj.css" type="text/css">
+    <script type="text/javascript">
 
-			  var _gaq = _gaq || [];
-			  _gaq.push(['_setAccount', 'UA-12135640-3']);
-			  _gaq.push(['_trackPageview']);
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-12135640-3']);
+        _gaq.push(['_trackPageview']);
 
-			  (function() {
-			    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			  })();
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
 
-			</script>	
-	</head>
-	<body>
-		<div id="background">
-			<img src="./images/YWJ_LOGO.jpg">
-		</div>
-		<div id="content">
-				<div class="menu">
-					<ul>
-						<li><a href="./index.html">HOME</a>
-						</li>
-						<li><a href="./shadow.html">SHADOW YOGA</a>
-						</li>
-						<li><a href="./classes.html">CLASSES</a>
-						</li>
-						<li><a href="./treatments.html">TREATMENTS</a>
-						</li>
-						<li><a href="./about.html">ABOUT JAYMIN</a>
-						</li>
-						<li><a class="selected" href="./contact.html">CONTACT</a>
-						</li>
-					</ul>
-				</div>
-				<div class="main">
-					<p><img alt="vahni" src="./images/DSCF2602_scaled.JPG">
-                        <img src="./images/DSCF2684.JPG" alt="uttanasana">
-					</p>
-				<p>email : <a href="mailto:hello@yogawithjaymin.co.nz">hello@yogawithjaymin.co.nz</a><br>
-					mobile : (0064) 027 292 0193</p>
-					<p><a href="http://www.facebook.com/pages/Yoga-with-jaymin/144351492257386" target="_TOP" title="Yoga with jaymin"><img src="http://badge.facebook.com/badge/144351492257386.2492.1172043975.png" width="114" height="84" style="border: 0px;margin-left:0px;" /></a><br>
-					The Yoga With Jaymin facebook page has the latest information on classes and workshops, as well as occasional links to articles and sites of interest to Shadow Yogis.
-							</p>
-					<p>links to further information:</p>
-					<p><a target="_blank" href="http://www.shadowyoga.com">Shadow Yoga</a> : Shandor Remete, the founder of Shadow Yoga.</p>
-					<p><a target="_blank" href="http://www.yogainthecity.co.uk">Yoga in the City</a> : Shadow Yoga classes and workshops in London.</p>
-					<p><a target="_blank" href="http://www.wearyogaclothing.com/">We'ar clothing</a> : inspiring eco and ethical yoga clothing with a soul and a conscience.</p>
-                    <p><a target="_blank" href="http://www.micasagallery.co.nz">Micasa Gallery</a> : venue for Matapouri classes.</p>
-					<p>website designed by <a target="_blank" href="http://www.bvwdesign.com">BVW Design</a></p>
-				</div>
-			</div>
-	</body>
+    </script>
+</head>
+<body>
+<div id="background">
+    <img src="./images/YWJ_LOGO.jpg">
+</div>
+<div id="content">
+    <div class="menu">
+        <ul>
+            <li><a href="./index.html">HOME</a>
+            </li>
+            <li><a href="./shadow.html">SHADOW YOGA</a>
+            </li>
+            <li><a href="./classes.html">CLASSES</a>
+            </li>
+            <li><a href="./treatments.html">TREATMENTS</a>
+            </li>
+            <li><a href="./yurt.html">YOGA IN A YURT</a>
+            </li>
+            <li><a href="./about.html">ABOUT JAYMIN</a>
+            </li>
+            <li><a class="selected" href="./contact.html">CONTACT</a>
+            </li>
+        </ul>
+    </div>
+    <div class="main">
+        <p><img alt="vahni" src="./images/DSCF2602_scaled.JPG">
+            <img src="./images/DSCF2684.JPG" alt="uttanasana">
+        </p>
+
+        <p>email : <a href="mailto:hello@yogawithjaymin.co.nz">hello@yogawithjaymin.co.nz</a><br>
+            mobile : (0064) 027 292 0193</p>
+
+        <p><a href="http://www.facebook.com/pages/Yoga-with-jaymin/144351492257386" target="_TOP"
+              title="Yoga with jaymin"><img src="http://badge.facebook.com/badge/144351492257386.2492.1172043975.png"
+                                            width="114" height="84" style="border: 0px;margin-left:0px;"/></a><br>
+            The Yoga With Jaymin facebook page has the latest information on classes and workshops, as well as
+            occasional links to articles and sites of interest to Shadow Yogis.
+        </p>
+
+        <p>links to further information:</p>
+
+        <p><a target="_blank" href="http://www.shadowyoga.com">Shadow Yoga</a> : Shandor Remete, the founder of Shadow
+            Yoga.</p>
+
+        <p><a target="_blank" href="http://www.yogainthecity.co.uk">Yoga in the City</a> : Shadow Yoga classes and
+            workshops in London.</p>
+
+        <p><a target="_blank" href="http://www.wearyogaclothing.com/">We'ar clothing</a> : inspiring eco and ethical
+            yoga clothing with a soul and a conscience.</p>
+
+        <p><a target="_blank" href="http://www.micasagallery.co.nz">Micasa Gallery</a> : venue for Matapouri classes.
+        </p>
+
+        <p>website designed by <a target="_blank" href="http://www.bvwdesign.com">BVW Design</a></p>
+    </div>
+</div>
+</body>
 </html>
