--- a/index.html
+++ b/index.html
@@ -1,59 +1,69 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-	<head>
-		<title>Shadow Yoga with Jaymin</title>
-		<LINK rel="stylesheet" href="ywj.css" type="text/css">
-			<script type="text/javascript">
+<head>
+    <title>Shadow Yoga with Jaymin</title>
+    <LINK rel="stylesheet" href="ywj.css" type="text/css">
+    <script type="text/javascript">
 
-			  var _gaq = _gaq || [];
-			  _gaq.push(['_setAccount', 'UA-12135640-3']);
-			  _gaq.push(['_trackPageview']);
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-12135640-3']);
+        _gaq.push(['_trackPageview']);
 
-			  (function() {
-			    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			  })();
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
 
-			</script>		
-	</head>
-	<body>
-		<div id="background">
-			<img src="./images/YWJ_LOGO.jpg">
-		</div>
-		<div id="content">
-				<div class="menu">
-					<ul>
-						<li><a class="selected" href="./index.html">HOME</a>
-						</li>
-						<li><a href="./shadow.html">SHADOW YOGA</a>
-						</li>
-						<li><a href="./classes.html">CLASSES</a>
-						</li>
-						<li><a href="./treatments.html">TREATMENTS</a>
-						</li>
-						<li><a href="./about.html">ABOUT JAYMIN</a>
-						</li>
-						<li><a href="./contact.html">CONTACT</a>
-						</li>
-					</ul>
-				</div>
-				<div class="main">
-				<p><img alt="twist" src="./images/DSCF2648gd.JPG">
-						 <img src="./images/DSCF2628gd_scaled.JPG" alt="sarpa">
-				</p>
-				<p>Welcome.
-				</p>
-				<p>Jaymin Gansell teaches Hatha Yoga, her teaching being grounded in the Shadow Yoga system.
-				</p>
-				<p>Jaymin teaches Shadow Yoga classes and workshops based in Northland with workshops in Auckland also
-                    being run on a regular basis.
-				</p>
-				<p>Shadow Yoga workshops are also offered throughout Aotearoa where expressions of interest are shown, please get in touch.
-				</p>
-				</div>
-			</div>
-		</div>
-		</div>
-	</body>
+    </script>
+</head>
+<body>
+<div id="background">
+    <img src="./images/YWJ_LOGO.jpg">
+</div>
+<div id="content">
+    <div class="menu">
+        <ul>
+            <li><a class="selected" href="./index.html">HOME</a>
+            </li>
+            <li><a href="./shadow.html">SHADOW YOGA</a>
+            </li>
+            <li><a href="./classes.html">CLASSES</a>
+            </li>
+            <li><a href="./treatments.html">TREATMENTS</a>
+            </li>
+            <li><a href="./yurt.html">YOGA IN A YURT</a>
+            </li>
+            <li><a href="./about.html">ABOUT JAYMIN</a>
+            </li>
+            <li><a href="./contact.html">CONTACT</a>
+            </li>
+        </ul>
+    </div>
+    <div class="main">
+        <p><img alt="twist" src="./images/DSCF2648gd.JPG">
+            <img src="./images/DSCF2628gd_scaled.JPG" alt="sarpa">
+        </p>
+
+        <p>Welcome.
+        </p>
+
+        <p>Jaymin Gansell teaches Hatha Yoga, her teaching being grounded in the Shadow Yoga system.
+        </p>
+
+        <p>Jaymin teaches Shadow Yoga classes and workshops based in Northland. Classes are taught from a 7m
+            yurt studio with views of the stunning Tutukaka coast.
+        </p>
+
+        <p>Shadow Yoga workshops are also offered throughout Aotearoa where expressions of interest are shown, please
+            get in touch.
+        </p>
+    </div>
+</div>
+</div>
+</div>
+</body>
 </html>
