--- a/treatments.html
+++ b/treatments.html
@@ -1,66 +1,105 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-	<head>
-		<title>Shadow Yoga with Jaymin - Treatments</title>
-		<LINK rel="stylesheet" href="ywj.css" type="text/css">
-			<script type="text/javascript">
+<head>
+    <title>Shadow Yoga with Jaymin - Treatments</title>
+    <LINK rel="stylesheet" href="ywj.css" type="text/css">
+    <script type="text/javascript">
 
-			  var _gaq = _gaq || [];
-			  _gaq.push(['_setAccount', 'UA-12135640-3']);
-			  _gaq.push(['_trackPageview']);
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-12135640-3']);
+        _gaq.push(['_trackPageview']);
 
-			  (function() {
-			    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			  })();
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
 
-			</script>		
-	</head>
-	<body>
-		<div id="background">
-			<img src="./images/YWJ_LOGO.jpg">
-		</div>
-		<div id="content">
-				<div class="menu">
-					<ul>
-						<li><a href="./index.html">HOME</a>
-						</li>
-						<li><a href="./shadow.html">SHADOW YOGA</a>
-						</li>
-						<li><a href="./classes.html">CLASSES</a>
-						</li>
-						<li><a class="selected" href="./treatments.html">TREATMENTS</a>
-						</li>
-						<li><a href="./about.html">ABOUT JAYMIN</a>
-						</li>
-						<li><a href="./contact.html">CONTACT</a>
-						</li>
-					</ul>
-				</div>
-				<div class="main">
-				
-				<p><h3>Therapeutic touch is beneficial in helping the mind and body connection to heal. Treatments are a balance of eastern and western healing traditions that are based around the understanding that everyone has their own individual needs.</h3></p>
-				<p><h3>HOLISTIC MASSAGE</h3></p>
-				<p>When stress accumulates all sorts of dis-eases may emerge upsetting our internal  and external rhythms. Massage assists the body's natural ability to heal itself.</p>
-				<p>Relaxation and stress release are important benefits of massage, but massage assists us on many more levels. Circulation of blood is stimulated throughout the whole body, nutrients are delivered and toxins are removed to re-vitalise our systems. Excellent for relieving tight knotted muscle fibres and alleviating deep- rooted tension so a greater freedom and range of motion can be enjoyed.</p>
-				<p>30 mins  -  $45<br>
-					60 mins  -  $75<br>
-					90 mins  -  $110</p>
-				<p>NB.	mobile massages are available for an additional $10<br>
-					massage also available for pregnant women</p>
-					<p><h3>REFLEXOLOGY</h3></p> 
-					<p>Reflexology is based on a system of zones and reflex areas that mirror an image of the body on the feet and hands. By applying pressure to the feet with specific  thumb, finger and hand techniques reflexology treats all the organs of the body and shifts blocked energy pathways that run throughout the body, enabling organs and glands to function properly in a holistic way.</p>
-					<p>When a blockage is removed from one area it stimulates the free flow of energy to a related area. This brings benefit not only to the physical body but also the emotional. The heart can stimulate the brain into alternative ways of thinking and behaving, and this can help relieve stress.</p>
-					<p>60 mins  -  $65</p>
-					<p><h3>ORGANIC FACIAL MASSAGE</h3></p>
-					<p>An organic holistic relaxing facial and massage treatment to revitalise and nurture  your face and reduce stress and tensions that build up in your head, neck and shoulder area.  This facial massage does not use steam or extractions. Instead warm organic muslin compresses are used with organic essential oil therapy to deeply cleanse the skin, soften the dead skin cells and open up the pores. Followed by cleansing, exfoliating, balancing and hydration, facial massage with lymph drainage, mask and moisturiser. It rejuvenates your skin and re-invigorates you.</p>
-					<p>60 mins  -  $65</p>
-					<p>Combinations (75 minutes) Back and shoulder massage with organic facial	$90</p> 							
-					<p>Reflexology with organic facial			$90</p>
-				</div>
-			</div>
-		</div>
-		</div>
-	</body>
+    </script>
+</head>
+<body>
+<div id="background">
+    <img src="./images/YWJ_LOGO.jpg">
+</div>
+<div id="content">
+    <div class="menu">
+        <ul>
+            <li><a href="./index.html">HOME</a>
+            </li>
+            <li><a href="./shadow.html">SHADOW YOGA</a>
+            </li>
+            <li><a href="./classes.html">CLASSES</a>
+            </li>
+            <li><a class="selected" href="./treatments.html">TREATMENTS</a>
+            </li>
+            <li><a href="./yurt.html">YOGA IN A YURT</a>
+            </li>
+            <li><a href="./about.html">ABOUT JAYMIN</a>
+            </li>
+            <li><a href="./contact.html">CONTACT</a>
+            </li>
+        </ul>
+    </div>
+    <div class="main">
+
+        <p>
+
+        <h3>Therapeutic touch is beneficial in helping the mind and body connection to heal. Treatments are a balance of
+            eastern and western healing traditions that are based around the understanding that everyone has their own
+            individual needs.</h3></p>
+        <p>
+
+        <h3>HOLISTIC MASSAGE</h3></p>
+        <p>When stress accumulates all sorts of dis-eases may emerge upsetting our internal and external rhythms.
+            Massage assists the body's natural ability to heal itself.</p>
+
+        <p>Relaxation and stress release are important benefits of massage, but massage assists us on many more levels.
+            Circulation of blood is stimulated throughout the whole body, nutrients are delivered and toxins are removed
+            to re-vitalise our systems. Excellent for relieving tight knotted muscle fibres and alleviating deep- rooted
+            tension so a greater freedom and range of motion can be enjoyed.</p>
+
+        <p>30 mins - $40<br>
+            60 mins - $70<br>
+            90 mins - $100</p>
+
+        <p>NB. mobile massages are available for an additional $10<br>
+            massage also available for pregnant women</p>
+
+        <p>
+
+        <h3>REFLEXOLOGY</h3></p>
+        <p>Reflexology is based on a system of zones and reflex areas that mirror an image of the body on the feet and
+            hands. By applying pressure to the feet with specific thumb, finger and hand techniques reflexology treats
+            all the organs of the body and shifts blocked energy pathways that run throughout the body, enabling organs
+            and glands to function properly in a holistic way.</p>
+
+        <p>When a blockage is removed from one area it stimulates the free flow of energy to a related area. This brings
+            benefit not only to the physical body but also the emotional. The heart can stimulate the brain into
+            alternative ways of thinking and behaving, and this can help relieve stress.</p>
+
+        <p>60 mins - $60</p>
+
+        <p>
+
+        <h3>ORGANIC FACIAL MASSAGE</h3></p>
+        <p>An organic holistic relaxing facial and massage treatment to revitalise and nurture your face and reduce
+            stress and tensions that build up in your head, neck and shoulder area. This facial massage does not use
+            steam or extractions. Instead warm organic muslin compresses are used with organic essential oil therapy to
+            deeply cleanse the skin, soften the dead skin cells and open up the pores. Followed by cleansing,
+            exfoliating, balancing and hydration, facial massage with lymph drainage, mask and moisturiser. It
+            rejuvenates your skin and re-invigorates you.</p>
+
+        <p>60 mins - $60</p>
+
+        <p>Combinations (75 minutes) Back and shoulder massage with organic facial $90</p>
+
+        <p>Reflexology with organic facial $90</p>
+    </div>
+</div>
+</div>
+</div>
+</body>
 </html>
