--- a/yurt.html
+++ b/yurt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-    <title>Shadow Yoga with Jaymin - Classes</title>
+    <title>Shadow Yoga with Jaymin - Yoga in a Yurt</title>
     <LINK rel="stylesheet" href="ywj.css" type="text/css">
     <script type="text/javascript">
 
@@ -31,11 +31,11 @@
             </li>
             <li><a href="./shadow.html">SHADOW YOGA</a>
             </li>
-            <li><a class="selected" href="./classes.html">CLASSES</a>
+            <li><a href="./classes.html">CLASSES</a>
             </li>
             <li><a href="./treatments.html">TREATMENTS</a>
             </li>
-            <li><a href="./yurt.html">YOGA IN A YURT</a>
+            <li><a class="selected" href="./yurt.html">YOGA IN A YURT</a>
             </li>
             <li><a href="./about.html">ABOUT JAYMIN</a>
             </li>
@@ -44,30 +44,16 @@
         </ul>
     </div>
     <div class="main">
-        <p><img alt="sarpa" src="./images/DSCF2612gd.JPG"> <img src="./images/DSCF2615.JPG" alt="ardhabujang">
+        <p style="width: 880px;"><img alt="yurt" src="./images/yurt1.jpg"> <img src="./images/yurt2.jpg" alt="yurt">
         </p>
 
-        <p>
-
-        <h2>SHADOW YOGA CLASSES</h2></p>
-        <p>NB private tuition and corporate classes available, pregnancy classes taught upon request</p>
-
-        <p>
-
-        <h3>MATAPOURI</h3></p>
-        <p>
-
-        <h3>Mi Casa Gallery, 529 Matapouri Rd, Tutukaka Coast (all classes $10)</h3></p>
-        <p>- Mondays <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;- 5.30 - 6.45pm<br>
-            &nbsp;&nbsp;&nbsp;&nbsp;- 7.15 - 8.30pm<br><br>
-            - Wednesdays - 7.00 - 8.15pm<br><br>
-            - Thursdays - 7.00 - 8.15pm<br><br>
-            - Saturdays - 9.00 - 10.15am
-        <p>
-        <br><br>
-
+        <p>Yoga classes are held in a beautiful 7m yurt studio (with wooden floor) that has views of the stunning Tutukaka coast.
+        </p>
+        <p>The yurt is situated <a href="http://g.co/maps/8xqwx">halfway between Tutukaka and Matapouri</a> along the Matapouri Rd, parking is next to the
+            Mi Casa gallery at 539 Matapouri Rd, Tutukaka coast.  Just follow the path up to the yurt.</p>
     </div>
+</div>
+</div>
 </div>
 </body>
 </html>
