new pic on front page, doggie pic on Contact page

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         </ul>
     </div>
     <div class="main">
-        <p><img src="./images/DSCF2716.jpg" alt="sarpa">
+        <p><img src="./images/DSCF2628gd_scaled.JPG" alt="virastana">
             <img src="./images/DSCF2669.jpg" alt="sarpa">
         </p>
 
