--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,7 @@
     <div class="main">
         <p><img alt="vahni" src="./images/DSCF2602_scaled.JPG">
             <img src="./images/DSCF2684.JPG" alt="uttanasana">
+            <img src="./images/DSCF2716.jpg" alt="woof">
         </p>
 
         <p>email : <a href="mailto:hello@yogawithjaymin.co.nz">hello@yogawithjaymin.co.nz</a><br>
