--- a/yurt.html
+++ b/yurt.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <div id="background">
-    <img src="./images/YWJ_LOGO.jpg">
+    <img src="./images/YWJ_LOGO.jpg" alt="">
 </div>
 <div id="content">
     <div class="menu">
@@ -52,8 +52,6 @@
         <p>The yurt is situated <a href="http://g.co/maps/8xqwx">halfway between Tutukaka and Matapouri</a> along the Matapouri Rd, parking is next to the
             Mi Casa gallery at 539 Matapouri Rd, Tutukaka coast.  Just follow the path up to the yurt.</p>
     </div>
-</div>
-</div>
 </div>
 </body>
 </html>
