--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="main">
         <p><img alt="twist" src="./images/DSCF2648gd.JPG">
-            <img src="./images/DSCF2628gd_scaled.JPG" alt="sarpa">
+            <img src="./images/DSCF2652.jpeg" alt="bakastana">
         </p>
 
         <p>Welcome.
