--- a/classes.html
+++ b/classes.html
@@ -47,8 +47,11 @@
         <p><img alt="sarpa" src="./images/DSCF2612gd.JPG"> <img src="./images/DSCF2615.JPG" alt="ardhabujang">
         </p>
 
-        <p><h2>SHADOW YOGA CLASSES</h2></p>
-        <p>Private tuition availble at $70 for $75 minutes.<br>Corporate classes available, pregnancy classes taught upon request</p>
+        <p>
+
+        <h2>SHADOW YOGA CLASSES</h2></p>
+        <p>Private tuition availble at $60 for $75 minutes.<br>Corporate classes available, pregnancy classes taught
+            upon request</p>
 
         <p>
 
@@ -56,41 +59,29 @@
         <p>
 
         <h3>Mi Casa Gallery, 529 Matapouri Rd, Tutukaka Coast (all classes $10)</h3></p>
-        <p><table style="width: 80%;margin-left: 3%;">
-        <tr>
-            <td>Monday</td>
-            <td>5.30 - 6.45pm &amp; 7.15 - 8.30pm</td>
-        </tr>
-        <tr>
-            <td>Tuesday</td>
-            <td>9.00 - 10.15am</td>
-        </tr>
-        <tr>
-            <td>Wednesday</td>
-            <td>7.00 - 8.15pm</td>
-        </tr>
-        <tr>
-            <td>Thursday</td>
-            <td>7.00 - 8.15pm</td>
-        </tr>
-        <tr>
-            <td>Friday</td>
-            <td>9.00 - 10.15am</td>
-        </tr>
-        <tr>
-            <td>Saturday</td>
-            <td>9.00 - 10.15am</td>
-        </tr>
+        <p>
+        <table style="width: 80%;margin-left: 3%;">
+            <tr>
+                <td>Monday</td>
+                <td>7.00 - 8.15pm</td>
+            </tr>
+            <tr>
+                <td>Tuesday</td>
+                <td>9.00 - 10.15am</td>
+            </tr>
+            <tr>
+                <td>Wednesday</td>
+                <td>7.00 - 8.15pm</td>
+            </tr>
+            <tr>
+                <td>Thursday</td>
+                <td>7.00 - 8.15pm</td>
+            </tr>
+            <tr>
+                <td>Friday</td>
+                <td>9.00 - 10.15am</td>
+            </tr>
         </table>
-
-            <!--- Monday:<br>-->
-            <!--&nbsp;&nbsp;&nbsp;&nbsp;5.30 - 6.45pm<br>-->
-            <!--&nbsp;&nbsp;&nbsp;&nbsp;7.15 - 8.30pm<br><br>-->
-            <!--- Tuesday: 9.00 - 10.15am<br><br>-->
-            <!--- Wednesday: 7.00 - 8.15pm<br><br>-->
-            <!--- Thursday: 7.00 - 8.15pm<br><br>-->
-            <!--- Friday: 9.00 - 10.15am<br><br>-->
-            <!--- Saturday: 9.00 - 10.15am-->
         </p>
         <br><br>
 
