new Whagarei classes

--- a/classes.html
+++ b/classes.html
@@ -50,15 +50,13 @@
         <p>
 
         <h2>SHADOW YOGA CLASSES</h2></p>
-        <p>Private tuition availble at $60 for $75 minutes.<br>Corporate classes available, pregnancy classes taught
+        <p>Private tuition availble at $60 for 75 minutes.<br>Corporate classes available, pregnancy classes taught
             upon request</p>
 
+        <p>Following classes all $10, concession cards available $90 for 10 classes:</p>
         <p>
-
         <h3>MATAPOURI</h3></p>
-        <p>
-
-        <h3>Mi Casa Gallery, 529 Matapouri Rd, Tutukaka Coast (all classes $10)</h3></p>
+        <p><h3>Mi Casa Gallery, 529 Matapouri Rd, Tutukaka Coast</h3></p>
         <p>
         <table style="width: 80%;margin-left: 3%;">
             <tr>
@@ -80,6 +78,19 @@
             <tr>
                 <td>Friday</td>
                 <td>9.00 - 10.15am</td>
+            </tr>
+        </table>
+        </p>
+
+        <h3>WHANGAREI</h3></p>
+        <p>
+
+        <h3>Whangarei Club, 18 Rust Ave - opposite the old library, parking available</h3></p>
+        <p>
+        <table style="width: 80%;margin-left: 3%;">
+            <tr>
+                <td>Saturday (except the first Sat of the month)</td>
+                <td>10.00 - 11.15am</td>
             </tr>
         </table>
         </p>
