--- a/about.html
+++ b/about.html
@@ -50,16 +50,21 @@
 
         <p>Jaymin was introduced, while living in London, to Shadow Yoga in 2002 after a few years of casually exploring
             other yoga styles. Different from anything she had encountered in other classes she immediately recognised
-            the intelligence in the shadow system's approach to working with the body, and consequently the mind.</p>
+            the intelligence in the Shadow Yoga system's approach to working with the body, and consequently the mind.</p>
 
-        <p>A native New Zealander, Jaymin stayed in London so she could continue to study Shadow Yoga with a couple of
-            years at Islington Yoga on their teacher training programme and with her mentor Jana Appleyard at Yoga in
-            the City. Jaymin has studied with Jana since 2004 and continued her teacher training in the form of a 3 year
-            apprenticeship. Jaymin still studies with Jana, as well as teaching classes and workshops at Yoga in the
-            City when she is in London.</p>
+        <p>A native New Zealander, Jaymin stayed in London so she could continue to study Shadow Yoga and was
+            fortunate to be guided in her studies by exceptional teachers.</p>
 
-        <p>Jaymin is continuing her Shadow Yoga development with a 3 year teacher training programme that started in
-            2009 with Zhander Remete (founder of Shadow Yoga) and Emma Balnaves.</p>
+        <p>Jaymin's teaching foundation started at Islington Yoga with Karen Watson and John Evans in the form of a
+            2 year teacher's course.  Further study was with Jana Appleyard whom Jaymin studied with for 8 years and
+            in that time did an intensive 3 year apprenticeship with Jana at Yoga In The City.</p>
+
+        <p>Most recently Jaymin's yoga journey has evolved under the guidance of Zhander Remete (founder of Shadow Yoga)
+            and Emma Balnaves on their 2009-2012 teacher training, attending a number of retreats with them all around
+            the world during the course of these years.</p>
+
+            <p>Now living in New Zealand Jaymin furthers her development by continuing to travel to study under the
+                care and guidance of Zhander and Emma.</p>
     </div>
 </div>
 </body>
