--- a/classes.html
+++ b/classes.html
@@ -50,33 +50,19 @@
         <p>
 
         <h2>SHADOW YOGA CLASSES</h2></p>
-        <p>Private tuition availble at $60 for 75 minutes.<br>Corporate classes available, pregnancy classes taught
+        <p>Private tuition available at $60 for 75 minutes.<br>Corporate classes available, pregnancy classes taught
             upon request</p>
 
         <p>Following classes all $10, concession cards available $90 for 10 classes:</p>
+
+        <h3>NGUNGURU</h3>
         <p>
-        <h3>MATAPOURI</h3></p>
-        <p><h3>Mi Casa Gallery, 529 Matapouri Rd, Tutukaka Coast</h3></p>
+        <p><h3>The Ngunguru Hall</h3></p>
+
         <p>
         <table style="width: 80%;margin-left: 3%;">
             <tr>
-                <td>Monday</td>
-                <td>7.00 - 8.15pm</td>
-            </tr>
-            <tr>
                 <td>Tuesday</td>
-                <td>9.00 - 10.15am</td>
-            </tr>
-            <tr>
-                <td>Wednesday</td>
-                <td>7.00 - 8.15pm</td>
-            </tr>
-            <tr>
-                <td>Thursday</td>
-                <td>7.00 - 8.15pm</td>
-            </tr>
-            <tr>
-                <td>Friday</td>
                 <td>9.00 - 10.15am</td>
             </tr>
         </table>
@@ -84,8 +70,17 @@
 
         <h3>WHANGAREI</h3></p>
         <p>
+        <p><h3>Whangarei Senior Citizen's Club, 4 Alexander St (open to all, not just senior citizens!)</h3></p>
 
-        <h3>Whangarei Club, 18 Rust Ave - opposite the old library, parking available</h3></p>
+        <p>
+        <table style="width: 80%;margin-left: 3%;">
+            <tr>
+                <td>Tuesday</td>
+                <td>5.30 - 6.45pm</td>
+            </tr>
+        </table>
+        </p>
+        <p><h3>Whangarei Club, 18 Rust Ave - opposite the old library, parking available</h3></p>
         <p>
         <table style="width: 80%;margin-left: 3%;">
             <tr>
