new classes and changes to front page

--- a/index.html
+++ b/index.html
@@ -54,12 +54,8 @@
         <p>Jaymin Gansell teaches Hatha Yoga, her teaching being grounded in the Shadow Yoga system.
         </p>
 
-        <p>Jaymin teaches Shadow Yoga classes and workshops based in Northland. Classes are taught from a 7m
-            yurt studio with views of the stunning Tutukaka coast.
-        </p>
-
-        <p>Shadow Yoga workshops are also offered throughout Aotearoa where expressions of interest are shown, please
-            get in touch.
+        <p>Jaymin teaches Shadow Yoga classes and workshops based in Whangarei, Northland. Classes are taught from a 7m
+            yurt studio with a wooden floor.
         </p>
     </div>
 </div>
