--- a/classes.html
+++ b/classes.html
@@ -54,7 +54,26 @@
             upon request</p>
 
         <p>Following classes all $10, concession cards available $90 for 10 classes:</p>
+        <h3>WHANGAREI</h3></p>
+        <p>
+        <p><h3>Whau Valley in the Yoga Yurt, 182 Whau Valley Road (road-side parking)</h3></p>
 
+        <p>
+        <table style="width: 80%;margin-left: 3%;">
+            <tr>
+                <td>Tuesday</td>
+                <td>6.00 - 7.15pm</td>
+            </tr><tr>
+                <td>Thursday</td>
+                <td>6.00 - 7.15pm</td>
+            </tr><tr>
+                <td>Friday</td>
+                <td>9.00 - 10.15am</td>
+            </tr><tr>
+                <td>Saturday</td>
+                <td>10.00 - 11.15am</td>
+            </tr>
+        </table>
         <h3>NGUNGURU</h3>
         <p>
         <p><h3>The Ngunguru Hall</h3></p>
@@ -68,29 +87,7 @@
         </table>
         </p>
 
-        <h3>WHANGAREI</h3></p>
-        <p>
-        <p><h3>Whangarei Senior Citizen's Club, 4 Alexander St (open to all, not just senior citizens!)</h3></p>
-
-        <p>
-        <table style="width: 80%;margin-left: 3%;">
-            <tr>
-                <td>Tuesday</td>
-                <td>5.30 - 6.45pm</td>
-            </tr>
-        </table>
-        </p>
-        <p><h3>Whangarei Club, 18 Rust Ave - opposite the old library, parking available</h3></p>
-        <p>
-        <table style="width: 80%;margin-left: 3%;">
-            <tr>
-                <td>Saturday (except the first Sat of the month)</td>
-                <td>10.00 - 11.15am</td>
-            </tr>
-        </table>
-        </p>
         <br><br>
-
     </div>
 </div>
 </body>
