--- a/yurt.html
+++ b/yurt.html
@@ -44,13 +44,15 @@
         </ul>
     </div>
     <div class="main">
-        <p style="width: 880px;"><img alt="yurt" src="./images/yurt1.jpg"> <img src="./images/yurt2.jpg" alt="yurt">
+        <p style="width: 880px;"><img alt="yurt" src="./images/yurt3.jpg"> <img src="./images/yurt4.JPG" alt="yurt">
         </p>
 
-        <p>Yoga classes are held in a beautiful 7m yurt studio (with wooden floor) that has views of the stunning Tutukaka coast.
+        <p>Whau Valley yoga classes are held in a 7m yurt studio (with a wooden floor)
+        at 182 Whau Valley Rd, Whangarei.</p>
+
+        <p>Parking is roadside, parking also available on the wide part of the driveway.</p>
+        <p style="width: 880px;"><img alt="yurt" src="./images/yurt5.jpg"> <img src="./images/yurt6.jpg" alt="yurt">
         </p>
-        <p>The yurt is situated <a href="http://g.co/maps/8xqwx">halfway between Tutukaka and Matapouri</a> along the Matapouri Rd, parking is next to the
-            Mi Casa gallery at 539 Matapouri Rd, Tutukaka coast.  Just follow the path up to the yurt.</p>
     </div>
 </div>
 </body>
