new workshop and link

--- a/classes.html
+++ b/classes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Shadow Yoga with Jaymin - Classes</title>
     <LINK rel="stylesheet" href="ywj.css" type="text/css">
@@ -9,7 +9,7 @@
         _gaq.push(['_setAccount', 'UA-12135640-3']);
         _gaq.push(['_trackPageview']);
 
-        (function() {
+        (function () {
             var ga = document.createElement('script');
             ga.type = 'text/javascript';
             ga.async = true;
@@ -49,34 +49,61 @@
 
         <p>
 
+        <h2>SHADOW YOGA WORKSHOPS</h2></p>
+        <p>
+
+        <h3>WEST AUCKLAND - June 28th & 29th, 2013</h3></p>
+        <p>
+
+        <h3>Te Atatu Yoga and Pilates, 595 Te Atau Road</h3></p>
+        <p>(big brick building next to the library, access from parkside, lots of parking behind the centre)</p>
+
+        <p>- Sat & Sun 7.00 - 9.00am</p>
+
+        <p>$60 for the weekend, bookings to <a href="mailto:yogawithjaymin@gmail.com">Yoga With Jaymin</a></p>
+
+        <p>
+            <br/>
+
         <h2>SHADOW YOGA CLASSES</h2></p>
         <p>Private tuition available at $60 for 75 minutes.<br>Corporate classes available, pregnancy classes taught
             upon request</p>
 
         <p>Following classes all $10, concession cards available $90 for 10 classes:</p>
+
         <h3>WHANGAREI</h3></p>
         <p>
-        <p><h3>Whau Valley in the Yoga Yurt, 182 Whau Valley Road (road-side parking)</h3></p>
+
+        <p>
+
+        <h3>Whau Valley in the Yoga Yurt, 182 Whau Valley Road (road-side parking)</h3></p>
 
         <p>
         <table style="width: 80%;margin-left: 3%;">
             <tr>
                 <td>Tuesday</td>
                 <td>6.00 - 7.15pm</td>
-            </tr><tr>
+            </tr>
+            <tr>
                 <td>Thursday</td>
                 <td>6.00 - 7.15pm</td>
-            </tr><tr>
+            </tr>
+            <tr>
                 <td>Friday</td>
                 <td>9.00 - 10.15am</td>
-            </tr><tr>
+            </tr>
+            <tr>
                 <td>Saturday</td>
                 <td>10.00 - 11.15am</td>
             </tr>
         </table>
         <h3>NGUNGURU</h3>
+
         <p>
-        <p><h3>The Ngunguru Hall</h3></p>
+
+        <p>
+
+        <h3>The Ngunguru Hall</h3></p>
 
         <p>
         <table style="width: 80%;margin-left: 3%;">
