--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,7 @@
         <p><a target="_blank" href="http://www.wearyogaclothing.com/">We'ar clothing</a> : inspiring eco and ethical
             yoga clothing with a soul and a conscience.</p>
 
+        <p><a target="_blank" href="http://www.myescape.co.nz">Myescape</a> : Women's clothes and accessories with fab yoga gear.</p>
         <p>website designed by <a target="_blank" href="http://www.bvwdesign.com">BVW Design</a></p>
     </div>
 </div>
