new page with Shandor quote

--- a/yurt.html
+++ b/yurt.html
@@ -37,6 +37,8 @@
             </li>
             <li><a class="selected" href="./yurt.html">YOGA IN A YURT</a>
             </li>
+            <li><a href="./quote.html">QUOTATION</a>
+            </li>
             <li><a href="./about.html">ABOUT JAYMIN</a>
             </li>
             <li><a href="./contact.html">CONTACT</a>
