changed quotation to yoga and moved it above shadow yoga in the menu bar

--- a/treatments.html
+++ b/treatments.html
@@ -29,6 +29,8 @@
         <ul>
             <li><a href="./index.html">HOME</a>
             </li>
+            <li><a href="./quote.html">YOGA</a>
+            </li>
             <li><a href="./shadow.html">SHADOW YOGA</a>
             </li>
             <li><a href="./classes.html">CLASSES</a>
@@ -36,8 +38,6 @@
             <li><a class="selected" href="./treatments.html">TREATMENTS</a>
             </li>
             <li><a href="./yurt.html">YOGA IN A YURT</a>
-            </li>
-            <li><a href="./quote.html">QUOTATION</a>
             </li>
             <li><a href="./about.html">ABOUT JAYMIN</a>
             </li>
