--- a/classes.html
+++ b/classes.html
@@ -51,22 +51,6 @@
 
         <p>
 
-        <h2>SHADOW YOGA WORKSHOPS</h2></p>
-        <p>
-
-        <h3>WEST AUCKLAND - June 28th & 29th, 2013</h3></p>
-        <p>
-
-        <h3>Te Atatu Yoga and Pilates, 595 Te Atau Road</h3></p>
-        <p>(big brick building next to the library, access from parkside, lots of parking behind the centre)</p>
-
-        <p>- Sat & Sun 7.00 - 9.00am</p>
-
-        <p>$60 for the weekend, bookings to <a href="mailto:yogawithjaymin@gmail.com">Yoga With Jaymin</a></p>
-
-        <p>
-            <br/>
-
         <h2>SHADOW YOGA CLASSES</h2></p>
         <p>Private tuition available at $60 for 75 minutes.<br>Corporate classes available, pregnancy classes taught
             upon request</p>
@@ -81,22 +65,31 @@
         <h3>Whau Valley in the Yoga Yurt, 182 Whau Valley Road (road-side parking)</h3></p>
 
         <p>
-        <table style="width: 80%;margin-left: 3%;">
+        <table style="width: 60%;margin-left: 3%;">
             <tr>
                 <td>Tuesday</td>
                 <td>6.00 - 7.15pm</td>
+                <td>Level 1</td>
+            </tr>
+            <tr>
+                <td>Tuesday</td>
+                <td>7.30 - 8.45pm</td>
+                <td>Beginners</td>
             </tr>
             <tr>
                 <td>Thursday</td>
                 <td>6.00 - 7.15pm</td>
+                <td>Beginners</td>
             </tr>
             <tr>
                 <td>Friday</td>
                 <td>9.00 - 10.15am</td>
+                <td>Open (all levels)</td>
             </tr>
             <tr>
                 <td>Saturday</td>
                 <td>10.00 - 11.15am</td>
+                <td>Open (all levels)</td>
             </tr>
         </table>
         <h3>NGUNGURU</h3>
@@ -108,10 +101,11 @@
         <h3>The Ngunguru Hall</h3></p>
 
         <p>
-        <table style="width: 80%;margin-left: 3%;">
+        <table style="width: 60%;margin-left: 3%;">
             <tr>
                 <td>Tuesday</td>
                 <td>9.00 - 10.15am</td>
+                <td>Open (all levels)</td>
             </tr>
         </table>
         </p>
