added MailChimp signup to contact page

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         _gaq.push(['_setAccount', 'UA-12135640-3']);
         _gaq.push(['_trackPageview']);
 
-        (function() {
+        (function () {
             var ga = document.createElement('script');
             ga.type = 'text/javascript';
             ga.async = true;
@@ -51,8 +51,30 @@
             <img src="./images/DSCF2716.jpg" alt="woof">
         </p>
 
-        <p>email : <a href="mailto:hello@yogawithjaymin.co.nz">hello@yogawithjaymin.co.nz</a><br>
-            mobile : (0064) 027 292 0193</p>
+        <p>email : <a href="mailto:hello@yogawithjaymin.co.nz">hello@yogawithjaymin.co.nz</a></p>
+            <p>mobile : (0064) 027 292 0193</p>
+        <p><hr/></p>
+        <!--<p id="mc_embed_signup">-->
+        <form action="http://yogawithjaymin.us7.list-manage.com/subscribe/post?u=4839410a8ee9be0d5d8583d1b&amp;id=17d5d12015"
+              method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+              target="_blank" novalidate>
+            <h3>Subscribe to the mailing list:</h3>
+
+            <p class="mc-field-group">
+                <label for="mce-EMAIL">Email Address </label>
+                <input type="email" value="" size="30" name="EMAIL" class="required email" id="mce-EMAIL">
+            </p>
+
+            <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>
+            <p class="clear">
+                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+            </p>
+        </form>
+        <!--</p>-->
+        <p><hr/></p>
 
         <p><a href="http://www.facebook.com/pages/Yoga-with-jaymin/144351492257386" target="_TOP"
               title="Yoga with jaymin"><img src="http://badge.facebook.com/badge/144351492257386.2492.1172043975.png"
@@ -69,7 +91,9 @@
         <p><a target="_blank" href="http://www.wearyogaclothing.com/">We'ar clothing</a> : inspiring eco and ethical
             yoga clothing with a soul and a conscience.</p>
 
-        <p><a target="_blank" href="http://www.myescape.co.nz">Myescape</a> : Women's clothes and accessories with fab yoga gear.</p>
+        <p><a target="_blank" href="http://www.myescape.co.nz">Myescape</a> : Women's clothes and accessories with fab
+            yoga gear.</p>
+
         <p>website designed by <a target="_blank" href="http://www.bvwdesign.com">BVW Design</a></p>
     </div>
 </div>
