rejigged newsletter and facebook wording

--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,12 @@
         <form action="http://yogawithjaymin.us7.list-manage.com/subscribe/post?u=4839410a8ee9be0d5d8583d1b&amp;id=17d5d12015"
               method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
               target="_blank" novalidate>
-            <h3>Subscribe to the mailing list:</h3>
+            <p>Sign up to the newsletter or the Yoga with Jaymin facebook page to keep up to date
+                with the latest information on classes and workshops as well as
+                occasional links to articles and sites of interest to Shadow Yogis.</p>
 
             <p class="mc-field-group">
-                <label for="mce-EMAIL">Email Address </label>
+                <label for="mce-EMAIL">Email Address: </label>
                 <input type="email" value="" size="30" name="EMAIL" class="required email" id="mce-EMAIL">
             </p>
 
@@ -70,19 +72,17 @@
                 <div class="response" id="mce-success-response" style="display:none"></div>
             </div>
             <p class="clear">
-                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                <input type="submit" value="Subscribe to Newsletter" name="subscribe" id="mc-embedded-subscribe" class="button">
             </p>
         </form>
         <!--</p>-->
-        <p><hr/></p>
 
         <p><a href="http://www.facebook.com/pages/Yoga-with-jaymin/144351492257386" target="_TOP"
               title="Yoga with jaymin"><img src="http://badge.facebook.com/badge/144351492257386.2492.1172043975.png"
                                             width="114" height="84" style="border: 0px;margin-left:0px;"/></a><br>
-            The Yoga With Jaymin facebook page has the latest information on classes and workshops, as well as
-            occasional links to articles and sites of interest to Shadow Yogis.
-        </p>
 
+        </p>
+        <p><hr/></p>
         <p>links to further information:</p>
 
         <p><a target="_blank" href="http://www.shadowyoga.com">Shadow Yoga</a> : Shandor Remete, the founder of Shadow
